--- a/CNN_Cifar10_Dataset.ipynb
+++ b/CNN_Cifar10_Dataset.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyOxMxedqK5pOUE1qCjDGa5g",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -28,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "metadata": {
         "id": "5cEqyXbfgj_Q"
       },
@@ -40,11 +24,34 @@
         "from keras.datasets import cifar10\n",
         "from keras.models import Sequential\n",
         "from keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPooling2D\n",
+        "from keras.callbacks import ModelCheckpoint\n",
         "from pathlib import Path"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nj8GO8PKg-BO",
+        "outputId": "f48552bc-5cfb-4bf6-81fb-a4269110fd63"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
+            "170498071/170498071 [==============================] - 2s 0us/step\n",
+            "(50000, 32, 32, 3)\n",
+            "(10000, 32, 32, 3)\n",
+            "(50000, 1)\n",
+            "(10000, 1)\n"
+          ]
+        }
+      ],
       "source": [
         "# Load the data\n",
         "\n",
@@ -55,47 +62,18 @@
         "\n",
         "print(y_train.shape)\n",
         "print(y_test.shape)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Nj8GO8PKg-BO",
-        "outputId": "44872ca9-edcc-448b-a502-2af897d9f2ee"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
-            "170498071/170498071 [==============================] - 11s 0us/step\n",
-            "(50000, 32, 32, 3)\n",
-            "(10000, 32, 32, 3)\n",
-            "(50000, 1)\n",
-            "(10000, 1)\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#Normalize data between 0 and 1\n",
-        "x_train = x_train.astype('float32')/255\n",
-        "x_test = x_test.astype('float32')/255\n",
-        "\n",
-        "print(x_train[0])\n"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3_opNZ9ohcTs",
-        "outputId": "ab81d838-b3a1-4793-8f0e-d96b23f051f6"
+        "outputId": "03214c39-d9d0-4f35-d252-7f44b5ee7103"
       },
-      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,10 +130,36 @@
             "  [0.48235294 0.36078432 0.28235295]]]\n"
           ]
         }
+      ],
+      "source": [
+        "#Normalize data between 0 and 1\n",
+        "x_train = x_train.astype('float32')/255\n",
+        "x_test = x_test.astype('float32')/255\n",
+        "\n",
+        "print(x_train[0])\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z1A2-TqDh-Z6",
+        "outputId": "dcb5b8ed-4b81-4b41-b2ab-964937ee9591"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2 3 4 5 6 7 8 9]\n",
+            "(50000, 10)\n",
+            "(10000, 10)\n"
+          ]
+        }
+      ],
       "source": [
         "# Convert label to one hot\n",
         "print(np.unique(y_train))\n",
@@ -165,27 +169,15 @@
         "\n",
         "print(y_train.shape)\n",
         "print(y_test.shape)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "z1A2-TqDh-Z6",
-        "outputId": "f10bebb5-c1d2-48d5-98c4-c3fcb38ab096"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[0 1 2 3 4 5 6 7 8 9]\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "mXl4OThuinTQ"
+      },
+      "outputs": [],
       "source": [
         "# Create Sequential model\n",
         "\n",
@@ -205,41 +197,33 @@
         "model.add(Dense(512, activation=\"relu\"))\n",
         "model.add(Dropout(0.25))\n",
         "model.add(Dense(10, activation=\"softmax\"))"
-      ],
-      "metadata": {
-        "id": "mXl4OThuinTQ"
-      },
-      "execution_count": 9,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "Ib8SJcAskiid"
+      },
+      "outputs": [],
       "source": [
         "# Compile the model\n",
         "\n",
         "model.compile(loss=\"categorical_crossentropy\",\n",
         "              optimizer=\"adam\",\n",
         "              metrics=[\"accuracy\"])"
-      ],
-      "metadata": {
-        "id": "Ib8SJcAskiid"
-      },
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model.summary()"
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jk53HmF2k7Xp",
-        "outputId": "52413b67-d87a-43ed-f215-5259cf2aa35e"
+        "outputId": "09db3ce4-3e10-4f53-9a1f-cce5f0905c0f"
       },
-      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,18 +233,18 @@
             "_________________________________________________________________\n",
             " Layer (type)                Output Shape              Param #   \n",
             "=================================================================\n",
-            " conv2d_1 (Conv2D)           (None, 32, 32, 32)        896       \n",
+            " conv2d (Conv2D)             (None, 32, 32, 32)        896       \n",
             "                                                                 \n",
-            " conv2d_2 (Conv2D)           (None, 30, 30, 32)        9248      \n",
+            " conv2d_1 (Conv2D)           (None, 30, 30, 32)        9248      \n",
             "                                                                 \n",
             " max_pooling2d (MaxPooling2D  (None, 15, 15, 32)       0         \n",
             " )                                                               \n",
             "                                                                 \n",
             " dropout (Dropout)           (None, 15, 15, 32)        0         \n",
             "                                                                 \n",
-            " conv2d_3 (Conv2D)           (None, 15, 15, 64)        18496     \n",
+            " conv2d_2 (Conv2D)           (None, 15, 15, 64)        18496     \n",
             "                                                                 \n",
-            " conv2d_4 (Conv2D)           (None, 13, 13, 64)        36928     \n",
+            " conv2d_3 (Conv2D)           (None, 13, 13, 64)        36928     \n",
             "                                                                 \n",
             " max_pooling2d_1 (MaxPooling  (None, 6, 6, 64)         0         \n",
             " 2D)                                                             \n",
@@ -282,94 +266,83 @@
             "_________________________________________________________________\n"
           ]
         }
+      ],
+      "source": [
+        "model.summary()"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "history = model.fit(x_train,\n",
-        "                    y_train,\n",
-        "                    batch_size=64,\n",
-        "                    epochs=30,\n",
-        "                    validation_split=0.2,\n",
-        "                    shuffle=True\n",
-        "                    )"
+        "filepath=\"weights.best.hdf5\"\n",
+        "checkpoint = ModelCheckpoint(filepath, monitor='val_accuracy', verbose=1, save_best_only=True, mode='max')\n",
+        "callbacks_list = [checkpoint]"
       ],
+      "metadata": {
+        "id": "XXZt34vhE1gC"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "czfOr0v2k-Tt",
-        "outputId": "318358e4-5192-4297-97e0-27969ea99b17"
+        "outputId": "c8b26aba-2182-4c65-fa55-eb31060d4ee3"
       },
-      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/30\n",
-            "625/625 [==============================] - 228s 363ms/step - loss: 1.5616 - accuracy: 0.4272 - val_loss: 1.2560 - val_accuracy: 0.5465\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.9738 - accuracy: 0.6558\n",
+            "Epoch 1: val_accuracy improved from -inf to 0.68100, saving model to weights.best.hdf5\n",
+            "625/625 [==============================] - 229s 366ms/step - loss: 0.9738 - accuracy: 0.6558 - val_loss: 0.9263 - val_accuracy: 0.6810\n",
             "Epoch 2/30\n",
-            "625/625 [==============================] - 233s 372ms/step - loss: 1.1594 - accuracy: 0.5888 - val_loss: 1.0227 - val_accuracy: 0.6383\n",
-            "Epoch 3/30\n",
-            "625/625 [==============================] - 225s 360ms/step - loss: 0.9838 - accuracy: 0.6542 - val_loss: 0.8703 - val_accuracy: 0.6961\n",
-            "Epoch 4/30\n",
-            "625/625 [==============================] - 226s 362ms/step - loss: 0.8546 - accuracy: 0.6999 - val_loss: 0.7935 - val_accuracy: 0.7200\n",
-            "Epoch 5/30\n",
-            "625/625 [==============================] - 227s 363ms/step - loss: 0.7737 - accuracy: 0.7293 - val_loss: 0.7740 - val_accuracy: 0.7297\n",
-            "Epoch 6/30\n",
-            "625/625 [==============================] - 217s 348ms/step - loss: 0.7082 - accuracy: 0.7494 - val_loss: 0.7366 - val_accuracy: 0.7443\n",
-            "Epoch 7/30\n",
-            "625/625 [==============================] - 216s 346ms/step - loss: 0.6503 - accuracy: 0.7706 - val_loss: 0.6936 - val_accuracy: 0.7572\n",
-            "Epoch 8/30\n",
-            "625/625 [==============================] - 217s 348ms/step - loss: 0.6006 - accuracy: 0.7869 - val_loss: 0.6848 - val_accuracy: 0.7630\n",
-            "Epoch 9/30\n",
-            "625/625 [==============================] - 218s 349ms/step - loss: 0.5418 - accuracy: 0.8087 - val_loss: 0.6734 - val_accuracy: 0.7683\n",
-            "Epoch 10/30\n",
-            "625/625 [==============================] - 218s 349ms/step - loss: 0.5046 - accuracy: 0.8216 - val_loss: 0.6622 - val_accuracy: 0.7776\n",
-            "Epoch 11/30\n",
-            "625/625 [==============================] - 218s 348ms/step - loss: 0.4711 - accuracy: 0.8334 - val_loss: 0.6810 - val_accuracy: 0.7761\n",
-            "Epoch 12/30\n",
-            "625/625 [==============================] - 217s 348ms/step - loss: 0.4363 - accuracy: 0.8435 - val_loss: 0.6650 - val_accuracy: 0.7779\n",
-            "Epoch 13/30\n",
-            "625/625 [==============================] - 217s 347ms/step - loss: 0.4147 - accuracy: 0.8515 - val_loss: 0.6685 - val_accuracy: 0.7832\n",
-            "Epoch 14/30\n",
-            "625/625 [==============================] - 218s 349ms/step - loss: 0.3838 - accuracy: 0.8644 - val_loss: 0.6832 - val_accuracy: 0.7831\n",
-            "Epoch 15/30\n",
-            "625/625 [==============================] - 217s 348ms/step - loss: 0.3694 - accuracy: 0.8697 - val_loss: 0.6862 - val_accuracy: 0.7812\n",
-            "Epoch 16/30\n",
-            "625/625 [==============================] - 217s 348ms/step - loss: 0.3424 - accuracy: 0.8778 - val_loss: 0.6936 - val_accuracy: 0.7792\n",
-            "Epoch 17/30\n",
-            "625/625 [==============================] - 218s 349ms/step - loss: 0.3294 - accuracy: 0.8818 - val_loss: 0.7204 - val_accuracy: 0.7852\n",
-            "Epoch 18/30\n",
-            "625/625 [==============================] - 218s 349ms/step - loss: 0.3162 - accuracy: 0.8873 - val_loss: 0.7263 - val_accuracy: 0.7812\n",
-            "Epoch 19/30\n",
-            "625/625 [==============================] - 219s 351ms/step - loss: 0.2994 - accuracy: 0.8939 - val_loss: 0.7256 - val_accuracy: 0.7839\n",
-            "Epoch 20/30\n",
-            "625/625 [==============================] - 220s 351ms/step - loss: 0.2874 - accuracy: 0.8982 - val_loss: 0.7321 - val_accuracy: 0.7818\n",
-            "Epoch 21/30\n",
-            "625/625 [==============================] - 221s 353ms/step - loss: 0.2794 - accuracy: 0.8996 - val_loss: 0.7690 - val_accuracy: 0.7764\n",
-            "Epoch 22/30\n",
-            "625/625 [==============================] - 220s 352ms/step - loss: 0.2693 - accuracy: 0.9043 - val_loss: 0.7517 - val_accuracy: 0.7793\n",
-            "Epoch 23/30\n",
-            "625/625 [==============================] - 221s 354ms/step - loss: 0.2581 - accuracy: 0.9078 - val_loss: 0.7627 - val_accuracy: 0.7896\n",
-            "Epoch 24/30\n",
-            "625/625 [==============================] - 220s 351ms/step - loss: 0.2584 - accuracy: 0.9090 - val_loss: 0.7587 - val_accuracy: 0.7839\n",
-            "Epoch 25/30\n",
-            "509/625 [=======================>......] - ETA: 39s - loss: 0.2380 - accuracy: 0.9180"
+            "503/625 [=======================>......] - ETA: 42s - loss: 0.8558 - accuracy: 0.7004"
           ]
         }
+      ],
+      "source": [
+        "history = model.fit(x_train,\n",
+        "                    y_train,\n",
+        "                    batch_size=64,\n",
+        "                    epochs=30,\n",
+        "                    validation_split=0.2,\n",
+        "                    shuffle=True,\n",
+        "                    callbacks=callbacks_list\n",
+        "                    )"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "nXxI9Dz_mO5X"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyM+9yb9I9MrMz33wMZ2KBZJ",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
