--- a/CNN_Cifar10_Dataset.ipynb
+++ b/CNN_Cifar10_Dataset.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 1,
       "metadata": {
         "id": "5cEqyXbfgj_Q"
       },
@@ -36,7 +36,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nj8GO8PKg-BO",
-        "outputId": "f48552bc-5cfb-4bf6-81fb-a4269110fd63"
+        "outputId": "b150396c-14a9-4340-9f4c-c0c56bc68601"
       },
       "outputs": [
         {
@@ -44,7 +44,7 @@
           "name": "stdout",
           "text": [
             "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
-            "170498071/170498071 [==============================] - 2s 0us/step\n",
+            "170498071/170498071 [==============================] - 6s 0us/step\n",
             "(50000, 32, 32, 3)\n",
             "(10000, 32, 32, 3)\n",
             "(50000, 1)\n",
@@ -72,7 +72,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3_opNZ9ohcTs",
-        "outputId": "03214c39-d9d0-4f35-d252-7f44b5ee7103"
+        "outputId": "cb60247c-d62b-477a-9a53-bceb55c0cb3f"
       },
       "outputs": [
         {
@@ -147,7 +147,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "z1A2-TqDh-Z6",
-        "outputId": "dcb5b8ed-4b81-4b41-b2ab-964937ee9591"
+        "outputId": "bcc8e415-d9a9-485c-d46b-e658df59a094"
       },
       "outputs": [
         {
@@ -222,7 +222,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jk53HmF2k7Xp",
-        "outputId": "09db3ce4-3e10-4f53-9a1f-cce5f0905c0f"
+        "outputId": "e763e12b-1ff5-4967-e5ec-f912e0337eca"
       },
       "outputs": [
         {
@@ -281,18 +281,18 @@
       "metadata": {
         "id": "XXZt34vhE1gC"
       },
-      "execution_count": 11,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "czfOr0v2k-Tt",
-        "outputId": "c8b26aba-2182-4c65-fa55-eb31060d4ee3"
+        "outputId": "ef998fb0-d9d3-45a3-8b4e-992dcfedaa45"
       },
       "outputs": [
         {
@@ -300,11 +300,125 @@
           "name": "stdout",
           "text": [
             "Epoch 1/30\n",
-            "625/625 [==============================] - ETA: 0s - loss: 0.9738 - accuracy: 0.6558\n",
-            "Epoch 1: val_accuracy improved from -inf to 0.68100, saving model to weights.best.hdf5\n",
-            "625/625 [==============================] - 229s 366ms/step - loss: 0.9738 - accuracy: 0.6558 - val_loss: 0.9263 - val_accuracy: 0.6810\n",
+            "625/625 [==============================] - ETA: 0s - loss: 1.5483 - accuracy: 0.4342\n",
+            "Epoch 1: val_accuracy improved from -inf to 0.56080, saving model to weights.best.hdf5\n",
+            "625/625 [==============================] - 227s 362ms/step - loss: 1.5483 - accuracy: 0.4342 - val_loss: 1.2233 - val_accuracy: 0.5608\n",
             "Epoch 2/30\n",
-            "503/625 [=======================>......] - ETA: 42s - loss: 0.8558 - accuracy: 0.7004"
+            "625/625 [==============================] - ETA: 0s - loss: 1.1672 - accuracy: 0.5853\n",
+            "Epoch 2: val_accuracy improved from 0.56080 to 0.62210, saving model to weights.best.hdf5\n",
+            "625/625 [==============================] - 229s 367ms/step - loss: 1.1672 - accuracy: 0.5853 - val_loss: 1.0665 - val_accuracy: 0.6221\n",
+            "Epoch 3/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.9718 - accuracy: 0.6576\n",
+            "Epoch 3: val_accuracy improved from 0.62210 to 0.69170, saving model to weights.best.hdf5\n",
+            "625/625 [==============================] - 243s 389ms/step - loss: 0.9718 - accuracy: 0.6576 - val_loss: 0.8689 - val_accuracy: 0.6917\n",
+            "Epoch 4/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.8547 - accuracy: 0.6962\n",
+            "Epoch 4: val_accuracy improved from 0.69170 to 0.72420, saving model to weights.best.hdf5\n",
+            "625/625 [==============================] - 231s 370ms/step - loss: 0.8547 - accuracy: 0.6962 - val_loss: 0.7960 - val_accuracy: 0.7242\n",
+            "Epoch 5/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.7709 - accuracy: 0.7295\n",
+            "Epoch 5: val_accuracy improved from 0.72420 to 0.74560, saving model to weights.best.hdf5\n",
+            "625/625 [==============================] - 237s 379ms/step - loss: 0.7709 - accuracy: 0.7295 - val_loss: 0.7374 - val_accuracy: 0.7456\n",
+            "Epoch 6/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.6916 - accuracy: 0.7562\n",
+            "Epoch 6: val_accuracy did not improve from 0.74560\n",
+            "625/625 [==============================] - 233s 373ms/step - loss: 0.6916 - accuracy: 0.7562 - val_loss: 0.7188 - val_accuracy: 0.7454\n",
+            "Epoch 7/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.6338 - accuracy: 0.7755\n",
+            "Epoch 7: val_accuracy improved from 0.74560 to 0.76230, saving model to weights.best.hdf5\n",
+            "625/625 [==============================] - 230s 368ms/step - loss: 0.6338 - accuracy: 0.7755 - val_loss: 0.6800 - val_accuracy: 0.7623\n",
+            "Epoch 8/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.5898 - accuracy: 0.7921\n",
+            "Epoch 8: val_accuracy improved from 0.76230 to 0.76610, saving model to weights.best.hdf5\n",
+            "625/625 [==============================] - 238s 381ms/step - loss: 0.5898 - accuracy: 0.7921 - val_loss: 0.6765 - val_accuracy: 0.7661\n",
+            "Epoch 9/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.5356 - accuracy: 0.8099\n",
+            "Epoch 9: val_accuracy improved from 0.76610 to 0.77100, saving model to weights.best.hdf5\n",
+            "625/625 [==============================] - 231s 370ms/step - loss: 0.5356 - accuracy: 0.8099 - val_loss: 0.6777 - val_accuracy: 0.7710\n",
+            "Epoch 10/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.5025 - accuracy: 0.8206\n",
+            "Epoch 10: val_accuracy did not improve from 0.77100\n",
+            "625/625 [==============================] - 232s 371ms/step - loss: 0.5025 - accuracy: 0.8206 - val_loss: 0.6926 - val_accuracy: 0.7615\n",
+            "Epoch 11/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.4749 - accuracy: 0.8302\n",
+            "Epoch 11: val_accuracy improved from 0.77100 to 0.77220, saving model to weights.best.hdf5\n",
+            "625/625 [==============================] - 231s 370ms/step - loss: 0.4749 - accuracy: 0.8302 - val_loss: 0.6756 - val_accuracy: 0.7722\n",
+            "Epoch 12/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.4359 - accuracy: 0.8463\n",
+            "Epoch 12: val_accuracy improved from 0.77220 to 0.77590, saving model to weights.best.hdf5\n",
+            "625/625 [==============================] - 233s 373ms/step - loss: 0.4359 - accuracy: 0.8463 - val_loss: 0.6714 - val_accuracy: 0.7759\n",
+            "Epoch 13/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.4058 - accuracy: 0.8577\n",
+            "Epoch 13: val_accuracy did not improve from 0.77590\n",
+            "625/625 [==============================] - 233s 374ms/step - loss: 0.4058 - accuracy: 0.8577 - val_loss: 0.7178 - val_accuracy: 0.7726\n",
+            "Epoch 14/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.3779 - accuracy: 0.8648\n",
+            "Epoch 14: val_accuracy improved from 0.77590 to 0.78060, saving model to weights.best.hdf5\n",
+            "625/625 [==============================] - 232s 370ms/step - loss: 0.3779 - accuracy: 0.8648 - val_loss: 0.6962 - val_accuracy: 0.7806\n",
+            "Epoch 15/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.3599 - accuracy: 0.8735\n",
+            "Epoch 15: val_accuracy did not improve from 0.78060\n",
+            "625/625 [==============================] - 234s 375ms/step - loss: 0.3599 - accuracy: 0.8735 - val_loss: 0.7153 - val_accuracy: 0.7787\n",
+            "Epoch 16/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.3400 - accuracy: 0.8783\n",
+            "Epoch 16: val_accuracy improved from 0.78060 to 0.78210, saving model to weights.best.hdf5\n",
+            "625/625 [==============================] - 232s 371ms/step - loss: 0.3400 - accuracy: 0.8783 - val_loss: 0.6952 - val_accuracy: 0.7821\n",
+            "Epoch 17/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.3231 - accuracy: 0.8861\n",
+            "Epoch 17: val_accuracy improved from 0.78210 to 0.78370, saving model to weights.best.hdf5\n",
+            "625/625 [==============================] - 231s 370ms/step - loss: 0.3231 - accuracy: 0.8861 - val_loss: 0.6797 - val_accuracy: 0.7837\n",
+            "Epoch 18/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.3149 - accuracy: 0.8878\n",
+            "Epoch 18: val_accuracy did not improve from 0.78370\n",
+            "625/625 [==============================] - 233s 372ms/step - loss: 0.3149 - accuracy: 0.8878 - val_loss: 0.7186 - val_accuracy: 0.7834\n",
+            "Epoch 19/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.2888 - accuracy: 0.8984\n",
+            "Epoch 19: val_accuracy improved from 0.78370 to 0.78440, saving model to weights.best.hdf5\n",
+            "625/625 [==============================] - 232s 371ms/step - loss: 0.2888 - accuracy: 0.8984 - val_loss: 0.7552 - val_accuracy: 0.7844\n",
+            "Epoch 20/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.2891 - accuracy: 0.8980\n",
+            "Epoch 20: val_accuracy did not improve from 0.78440\n",
+            "625/625 [==============================] - 232s 371ms/step - loss: 0.2891 - accuracy: 0.8980 - val_loss: 0.7199 - val_accuracy: 0.7818\n",
+            "Epoch 21/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.2696 - accuracy: 0.9045\n",
+            "Epoch 21: val_accuracy did not improve from 0.78440\n",
+            "625/625 [==============================] - 230s 368ms/step - loss: 0.2696 - accuracy: 0.9045 - val_loss: 0.7778 - val_accuracy: 0.7818\n",
+            "Epoch 22/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.2697 - accuracy: 0.9040\n",
+            "Epoch 22: val_accuracy did not improve from 0.78440\n",
+            "625/625 [==============================] - 232s 372ms/step - loss: 0.2697 - accuracy: 0.9040 - val_loss: 0.7595 - val_accuracy: 0.7786\n",
+            "Epoch 23/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.2599 - accuracy: 0.9097\n",
+            "Epoch 23: val_accuracy did not improve from 0.78440\n",
+            "625/625 [==============================] - 231s 370ms/step - loss: 0.2599 - accuracy: 0.9097 - val_loss: 0.7583 - val_accuracy: 0.7806\n",
+            "Epoch 24/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.2489 - accuracy: 0.9136\n",
+            "Epoch 24: val_accuracy improved from 0.78440 to 0.78700, saving model to weights.best.hdf5\n",
+            "625/625 [==============================] - 233s 372ms/step - loss: 0.2489 - accuracy: 0.9136 - val_loss: 0.7708 - val_accuracy: 0.7870\n",
+            "Epoch 25/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.2410 - accuracy: 0.9172\n",
+            "Epoch 25: val_accuracy did not improve from 0.78700\n",
+            "625/625 [==============================] - 231s 370ms/step - loss: 0.2410 - accuracy: 0.9172 - val_loss: 0.7792 - val_accuracy: 0.7818\n",
+            "Epoch 26/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.2306 - accuracy: 0.9194\n",
+            "Epoch 26: val_accuracy did not improve from 0.78700\n",
+            "625/625 [==============================] - 231s 370ms/step - loss: 0.2306 - accuracy: 0.9194 - val_loss: 0.7773 - val_accuracy: 0.7824\n",
+            "Epoch 27/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.2219 - accuracy: 0.9215\n",
+            "Epoch 27: val_accuracy did not improve from 0.78700\n",
+            "625/625 [==============================] - 232s 371ms/step - loss: 0.2219 - accuracy: 0.9215 - val_loss: 0.8319 - val_accuracy: 0.7780\n",
+            "Epoch 28/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.2281 - accuracy: 0.9200\n",
+            "Epoch 28: val_accuracy did not improve from 0.78700\n",
+            "625/625 [==============================] - 231s 369ms/step - loss: 0.2281 - accuracy: 0.9200 - val_loss: 0.8219 - val_accuracy: 0.7751\n",
+            "Epoch 29/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.2236 - accuracy: 0.9233\n",
+            "Epoch 29: val_accuracy did not improve from 0.78700\n",
+            "625/625 [==============================] - 231s 369ms/step - loss: 0.2236 - accuracy: 0.9233 - val_loss: 0.7834 - val_accuracy: 0.7807\n",
+            "Epoch 30/30\n",
+            "625/625 [==============================] - ETA: 0s - loss: 0.2149 - accuracy: 0.9238\n",
+            "Epoch 30: val_accuracy did not improve from 0.78700\n",
+            "625/625 [==============================] - 232s 371ms/step - loss: 0.2149 - accuracy: 0.9238 - val_loss: 0.8193 - val_accuracy: 0.7816\n"
           ]
         }
       ],
@@ -321,18 +435,77 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "nXxI9Dz_mO5X"
+        "id": "nXxI9Dz_mO5X",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6ecf3a2a-69a8-4350-eee8-b16b46d4c95e"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4384"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ],
+      "source": [
+        "# Save the neural network structure\n",
+        "\n",
+        "model_structure = model.to_json()\n",
+        "f = Path(\"model_structure.json\")\n",
+        "f.write_text(model_structure)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from keras.saving.model_config import model_from_json\n",
+        "# Load model structure\n",
+        "\n",
+        "model_structure = f.read_text()\n",
+        "\n",
+        "model_loaded = model_from_json(model_structure)"
+      ],
+      "metadata": {
+        "id": "Q4ZVfAHe6gr5"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load weights\n",
+        "\n",
+        "model_loaded.load_weights(\"weights.best.hdf5\")"
+      ],
+      "metadata": {
+        "id": "N4Jr1-Q27FDr"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vdCq-lRE7YN2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+9yb9I9MrMz33wMZ2KBZJ",
+      "authorship_tag": "ABX9TyPbcS6TXyCX7acpSe50psjy",
       "include_colab_link": true
     },
     "kernelspec": {
