--- a/Pytorch_MNIST.ipynb
+++ b/Pytorch_MNIST.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOuhZndz1w53nCYxwXmpYUN",
+      "authorship_tag": "ABX9TyNwHwuK0L9IgY5MDvLwnNPi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1927,9 +1927,74 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "\n",
+        "class Net(nn.Module):\n",
+        "  def __init__(self):\n",
+        "    super(Net, self).__init__()\n",
+        "\n",
+        "    # Define layers here\n",
+        "    # First CNN layer using 32 filters of 3x3 size with stride of 1 and padding of 0\n",
+        "    self.conv1 = nn.Conv2d(1, 32, 3)\n",
+        "    # Second layer using 64 filters of 3x3 size with stride 1 and padding of 0\n",
+        "    self.conv2 = nn.Conv2d(32, 64, 3)\n",
+        "    # Max Pool Layer 2 x 2 kernel of stride 2\n",
+        "    self.pool = nn.MaxPool2d(2, 2)\n",
+        "    # First Fully Connected Layer takes output of max pool 12 x 12 x 64 and connects it\n",
+        "    # to a set of 128 nodes\n",
+        "    self.fc1 = nn.Linear(64 * 12 * 12, 128)\n",
+        "    # Second Fully Connected Layer connects the 128 nodes to 10 output nodes (our classes)\n",
+        "    self.fc2 = nn.Linear(128, 10)\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    # Here we define our forward propagation sequence\n",
+        "    # Its Conv1 - Relu - Conv2 - Relu - Max Pool - Flatten - FC1 - FC2\n",
+        "    x = F.relu(self.conv1(x))\n",
+        "    x = self.pool(F.relu(self.conv2(x)))\n",
+        "    x = x.view(-1, 64 * 12 * 12) # Flatten\n",
+        "    x = F.relu(self.fc1(x))\n",
+        "    x = self.fc2(x)\n",
+        "    return x\n",
+        "\n",
+        "# Create an instance of the model and move it to the CUDA devicec\n",
+        "net = Net()\n",
+        "net.to(device)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LbEjsWhJlM0h",
+        "outputId": "6e2c25fa-6e07-4185-d0a0-7fa79cf4d693"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Net(\n",
+              "  (conv1): Conv2d(1, 32, kernel_size=(3, 3), stride=(1, 1))\n",
+              "  (conv2): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+              "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+              "  (fc1): Linear(in_features=9216, out_features=128, bias=True)\n",
+              "  (fc2): Linear(in_features=128, out_features=10, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "LbEjsWhJlM0h"
+        "id": "dK3nUgZvrKCi"
       },
       "execution_count": null,
       "outputs": []
