--- a/Pytorch_MNIST.ipynb
+++ b/Pytorch_MNIST.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwHwuK0L9IgY5MDvLwnNPi",
+      "authorship_tag": "ABX9TyN/V0pIhRyiuYZuIHL9yz2y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1992,9 +1992,56 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "print(net)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dK3nUgZvrKCi",
+        "outputId": "478c08ee-112d-4d70-d991-5ecb20b9ed51"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Net(\n",
+            "  (conv1): Conv2d(1, 32, kernel_size=(3, 3), stride=(1, 1))\n",
+            "  (conv2): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+            "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+            "  (fc1): Linear(in_features=9216, out_features=128, bias=True)\n",
+            "  (fc2): Linear(in_features=128, out_features=10, bias=True)\n",
+            ")\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import optimizer function\n",
+        "import torch.optim as optim\n",
+        "\n",
+        "# Use crossentropy loss as our loss function\n",
+        "criterion = nn.CrossEntropyLoss()\n",
+        "\n",
+        "# For optimizer we use SGD with a learning rate of 0.001 and momentum 0.9\n",
+        "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)\n"
+      ],
+      "metadata": {
+        "id": "FWivsamNrt8m"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "dK3nUgZvrKCi"
+        "id": "zCm0SuxBsrGe"
       },
       "execution_count": null,
       "outputs": []
