--- a/Pytorch_MNIST.ipynb
+++ b/Pytorch_MNIST.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPnt/P0jSFjixZ1Bqm1+ESj",
+      "authorship_tag": "ABX9TyNlYFHBFRmkdy42/N8R7Vkg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2040,7 +2040,7 @@
     {
       "cell_type": "code",
       "source": [
-        "epochs = 10\n",
+        "epochs = 5\n",
         "\n",
         "# Create empty arrays to store logs\n",
         "epochs_log = []\n",
@@ -2094,7 +2094,7 @@
         "        print(f'Epoch: {epoch_num}, Mini-Batches Completed: {(i+1)}, Loss: {actual_loss:.3f}, Test Accuracy = {accuracy:.3f}%')\n",
         "        running_loss = 0.0\n",
         "\n",
-        "  epoch_logg.append(epoch_num)\n",
+        "  epochs_log.append(epoch_num)\n",
         "  loss_log.apend(actual_loss)\n",
         "  accuracy_log.append(accuracy)\n",
         "\n",
@@ -2105,7 +2105,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zCm0SuxBsrGe",
-        "outputId": "194136b9-17d8-417c-e4e4-a31520789e72"
+        "outputId": "8720fb3d-f247-437d-c74b-c416cf2d69aa"
       },
       "execution_count": null,
       "outputs": [
@@ -2114,19 +2114,101 @@
           "name": "stdout",
           "text": [
             "Starting Epoch: 1...\n",
-            "Epoch: 1, Mini-Batches Completed: 50, Loss: 2.256, Test Accuracy = 52.617%\n",
-            "Epoch: 1, Mini-Batches Completed: 100, Loss: 2.072, Test Accuracy = 62.560%\n",
-            "Epoch: 1, Mini-Batches Completed: 150, Loss: 1.569, Test Accuracy = 77.562%\n",
-            "Epoch: 1, Mini-Batches Completed: 200, Loss: 0.843, Test Accuracy = 83.998%\n"
+            "Epoch: 1, Mini-Batches Completed: 50, Loss: 0.220, Test Accuracy = 93.458%\n",
+            "Epoch: 1, Mini-Batches Completed: 100, Loss: 0.225, Test Accuracy = 93.632%\n",
+            "Epoch: 1, Mini-Batches Completed: 150, Loss: 0.214, Test Accuracy = 93.937%\n",
+            "Epoch: 1, Mini-Batches Completed: 200, Loss: 0.206, Test Accuracy = 94.202%\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "PATH = './mnist_cnn_net.pth'\n",
+        "torch.save(net.state_dict(), PATH)"
+      ],
       "metadata": {
         "id": "CFWI6Fem2bas"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dataiter = iter(testloader)\n",
+        "images, labels = next(dataiter)\n",
+        "\n",
+        "# Display images \n",
+        "imshow(torchvision.utils.make_grid(images))\n",
+        "print('GroundTruth: ', ''.join('%1s' % labels[j].numpy() for j in range(128)))"
+      ],
+      "metadata": {
+        "id": "jA2FtLgf4rM_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create an instance of the model and move it to the device\n",
+        "net = Net()\n",
+        "net.to(device)\n",
+        "\n",
+        "# Load weights from the specified path\n",
+        "net.load_state_dict(torch.load(PATH))"
+      ],
+      "metadata": {
+        "id": "jtrtMYgO4r1K"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_iter = iter(testloader)\n",
+        "\n",
+        "images, labels = next(test_iter)\n",
+        "\n",
+        "images = images.to(device)\n",
+        "labels = labels.to(device)\n",
+        "\n",
+        "outputs = net(images)\n",
+        "\n",
+        "_, predicted = torch.max(outputs, 1)\n",
+        "\n",
+        "print('Predicted: ', ''.join('%1s' % predicted[j].cpu().numpy() for j in range(128)))\n"
+      ],
+      "metadata": {
+        "id": "1_LVhtuE4r8Q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "correct = 0\n",
+        "total = 0\n",
+        "\n",
+        "with torch.no_grad():\n",
+        "  for data in testloader:\n",
+        "    images, labels = data\n",
+        "    images = images.to(device)\n",
+        "    labels = labels.to(device)\n",
+        "    outputs = net(images)\n",
+        "    _, predicted = torch.max(outputs.data, 1)\n",
+        "    total += labels.size(0)\n",
+        "    correct += (predicted == labels).sum().item()\n",
+        "\n",
+        "accuracy = 100 * correct / total\n",
+        "print(f'Accuracy of the network on the 10000 test images: {accuracy:.3}%')\n"
+      ],
+      "metadata": {
+        "id": "46lNd7JN9r55"
       },
       "execution_count": null,
       "outputs": []
