--- a/Pytorch_MNIST.ipynb
+++ b/Pytorch_MNIST.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPxDWg6XWuV5jy7QjD9F+24",
+      "authorship_tag": "ABX9TyOgRZUO0U3yHPfp7S6G3K/B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24607,9 +24607,142 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "nb_classes = 10\n",
+        "\n",
+        "confusion_matrix = torch.zeros(nb_classes, nb_classes)\n",
+        "\n",
+        "with torch.no_grad():\n",
+        "  for i, (inputs, classes) in enumerate(testloader):\n",
+        "    inputs = inputs.to(device)\n",
+        "    classes = classes.to(device)\n",
+        "    outputs = net(inputs)\n",
+        "    _, preds = torch.max(outputs, 1)\n",
+        "    for t, p in zip(classes.view(-1), preds.view(-1)):\n",
+        "      confusion_matrix[t.long(), p.long()] += 1\n",
+        "print(confusion_matrix)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E7nABCT7N8SL",
+        "outputId": "a5c3ba7f-2063-4762-d1ad-fe1a42781fef"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[5.8650e+03, 1.0000e+00, 5.0000e+00, 0.0000e+00, 9.0000e+00, 3.0000e+00,\n",
+            "         2.3000e+01, 5.0000e+00, 4.0000e+00, 8.0000e+00],\n",
+            "        [3.0000e+00, 6.6750e+03, 2.4000e+01, 2.0000e+00, 1.8000e+01, 0.0000e+00,\n",
+            "         5.0000e+00, 1.1000e+01, 2.0000e+00, 2.0000e+00],\n",
+            "        [1.2000e+01, 1.6000e+01, 5.8150e+03, 1.4000e+01, 1.6000e+01, 0.0000e+00,\n",
+            "         7.0000e+00, 4.7000e+01, 2.6000e+01, 5.0000e+00],\n",
+            "        [1.5000e+01, 1.2000e+01, 3.3000e+01, 5.9370e+03, 3.0000e+00, 1.7000e+01,\n",
+            "         2.0000e+00, 3.8000e+01, 4.0000e+01, 3.4000e+01],\n",
+            "        [3.0000e+00, 9.0000e+00, 4.0000e+00, 0.0000e+00, 5.7820e+03, 0.0000e+00,\n",
+            "         1.5000e+01, 7.0000e+00, 5.0000e+00, 1.7000e+01],\n",
+            "        [1.1000e+01, 8.0000e+00, 3.0000e+00, 2.3000e+01, 6.0000e+00, 5.2570e+03,\n",
+            "         4.7000e+01, 4.0000e+00, 3.7000e+01, 2.5000e+01],\n",
+            "        [1.1000e+01, 7.0000e+00, 2.0000e+00, 0.0000e+00, 8.0000e+00, 4.0000e+00,\n",
+            "         5.8730e+03, 0.0000e+00, 1.3000e+01, 0.0000e+00],\n",
+            "        [4.0000e+00, 1.3000e+01, 2.2000e+01, 1.0000e+00, 1.7000e+01, 1.0000e+00,\n",
+            "         0.0000e+00, 6.1820e+03, 4.0000e+00, 2.1000e+01],\n",
+            "        [1.5000e+01, 3.4000e+01, 1.8000e+01, 8.0000e+00, 2.9000e+01, 8.0000e+00,\n",
+            "         2.2000e+01, 1.1000e+01, 5.6830e+03, 2.3000e+01],\n",
+            "        [1.2000e+01, 8.0000e+00, 0.0000e+00, 6.0000e+00, 6.9000e+01, 9.0000e+00,\n",
+            "         2.0000e+00, 5.6000e+01, 1.7000e+01, 5.7700e+03]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(confusion_matrix.diag()/confusion_matrix.sum(1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tGFuvpfOgtMQ",
+        "outputId": "625c4718-2689-4a29-99ae-e6f3f9d7f39a"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([0.9902, 0.9901, 0.9760, 0.9684, 0.9897, 0.9697, 0.9924, 0.9868, 0.9713,\n",
+            "        0.9699])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import confusion_matrix\n",
+        "\n",
+        "nb_classes = 10\n",
+        "\n",
+        "predlist = torch.zeros(0, dtype=torch.long, device='cpu')\n",
+        "lbllist = torch.zeros(0, dtype=torch.long, device='cpu')\n",
+        "\n",
+        "with torch.no_grad():\n",
+        "  for i, (inputs, classes) in enumerate(testloader):\n",
+        "    inputs = inputs.to(device)\n",
+        "    classes = classes.to(device)\n",
+        "    outputs = net(inputs)\n",
+        "    _, preds = torch.max(outputs, 1)\n",
+        "\n",
+        "    predlist = torch.cat([predlist, preds.view(-1).cpu()])\n",
+        "    lbllist = torch.cat([lbllist, classes.view(-1).cpu()])\n",
+        "\n",
+        "conf_mat = confusion_matrix(lbllist.numpy(), predlist.numpy())\n",
+        "print(conf_mat)\n",
+        "\n",
+        "class_accuracy = 100 * conf_mat.diagonal() / conf_mat.sum(1)\n",
+        "print(class_accuracy)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "puKzVMxWg7GT",
+        "outputId": "5dba7d3f-71f6-4781-8615-89e8fb060033"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[5865    1    5    0    9    3   23    5    4    8]\n",
+            " [   3 6675   24    2   18    0    5   11    2    2]\n",
+            " [  12   16 5815   14   16    0    7   47   26    5]\n",
+            " [  15   12   33 5937    3   17    2   38   40   34]\n",
+            " [   3    9    4    0 5782    0   15    7    5   17]\n",
+            " [  11    8    3   23    6 5257   47    4   37   25]\n",
+            " [  11    7    2    0    8    4 5873    0   13    0]\n",
+            " [   4   13   22    1   17    1    0 6182    4   21]\n",
+            " [  15   34   18    8   29    8   22   11 5683   23]\n",
+            " [  12    8    0    6   69    9    2   56   17 5770]]\n",
+            "[99.0207665  99.00622961 97.59986573 96.83575273 98.97295447 96.97472791\n",
+            " 99.23960798 98.67517957 97.12869595 96.99109094]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "E7nABCT7N8SL"
+        "id": "0rVOuDBdiw3t"
       },
       "execution_count": null,
       "outputs": []
