--- a/3_Keras_Performance_Analysis.ipynb
+++ b/3_Keras_Performance_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwmjH6h7GNlxqXaOVigWDG",
+      "authorship_tag": "ABX9TyPl0+PVuACAjyn1gQ4t4VhP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -518,9 +518,48 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import confusion_matrix\n",
+        "import numpy as np\n",
+        "\n",
+        "x_test = x_test.reshape(10000,28,28,1)\n",
+        "y_pred = np.argmax(model.predict(x_test), axis=-1)\n",
+        "\n",
+        "print(confusion_matrix(y_test, y_pred))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8Ae8XTvoJaK6",
+        "outputId": "d04860bd-b636-4e6a-cfb0-b34111385ec9"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "313/313 [==============================] - 8s 27ms/step\n",
+            "[[ 966    0    1    2    1    3    4    1    2    0]\n",
+            " [   0 1117    3    0    0    0    4    0   11    0]\n",
+            " [   8    4  962   16    8    2    3    8   19    2]\n",
+            " [   3    1    7  959    1    5    1    7   15   11]\n",
+            " [   1    1    6    0  935    0    6    2    3   28]\n",
+            " [  11    4    1   23    4  811   12    1   17    8]\n",
+            " [  10    3    3    2    7    9  917    2    5    0]\n",
+            " [   0    8   18    5    8    1    0  952    5   31]\n",
+            " [   5    3    2   13    7    6    9    7  913    9]\n",
+            " [   8    7    1   10   18    1    1    6    9  948]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "8Ae8XTvoJaK6"
+        "id": "j-ZCx2I0KTqA"
       },
       "execution_count": null,
       "outputs": []
