--- a/4_PyTorch_Performance_Analysis.ipynb
+++ b/4_PyTorch_Performance_Analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBo2qKG4fUuF6/mzjaAWd/",
+      "authorship_tag": "ABX9TyMKDd57RtkH8okvP6pF8LPX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,9 +62,30 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import cv2\n",
+        "import numpy as np\n",
+        "from matplotlib import pyplot as pyplot\n",
+        "\n",
+        "def imgshow(title, image=None, size=6):\n",
+        "  w,h = image.shape[0], image.shape[1]\n",
+        "  aspect_ratio = w/h\n",
+        "  plt.figure(figsize=(size*aspect_ratio, size))\n",
+        "  plt.imshow(cv2.cvtColor(image, cv2.COLOR_BGR2RGB))\n",
+        "  plt.title(title)\n",
+        "  plt.show()"
+      ],
       "metadata": {
         "id": "rn_5ksLDEZdB"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "i4TQ3t1jFcGZ"
       },
       "execution_count": null,
       "outputs": []
